[gd_scene load_steps=13 format=3 uid="uid://bo4s5uuaajyto"]

[ext_resource type="Script" uid="uid://dtmi6ifg45lk6" path="res://growingzone.gd" id="1_w48n1"]
[ext_resource type="Texture2D" uid="uid://cqv2vg2pc4x1a" path="res://farmingTilesheetComplete.png" id="2_3g6n7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8ych"]
size = Vector2(12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu304"]
atlas = ExtResource("2_3g6n7")
region = Rect2(64, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_13s5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu304")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofvn7"]
atlas = ExtResource("2_3g6n7")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5oix"]
atlas = ExtResource("2_3g6n7")
region = Rect2(160, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tuts"]
atlas = ExtResource("2_3g6n7")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj6vn"]
atlas = ExtResource("2_3g6n7")
region = Rect2(128, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds3w0"]
atlas = ExtResource("2_3g6n7")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a641u"]
atlas = ExtResource("2_3g6n7")
region = Rect2(96, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcffl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5oix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tuts")
}],
"loop": true,
"name": &"carrotgrowing animation",
"speed": 0.0
}, {
"frames": [],
"loop": true,
"name": &"none",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj6vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds3w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a641u")
}],
"loop": true,
"name": &"oniongrowing animation",
"speed": 0.0
}]

[node name="growingzone" type="StaticBody2D"]
script = ExtResource("1_w48n1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_r8ych")

[node name="hoeland" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_13s5d")

[node name="plant" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_mcffl")
animation = &"none"

[node name="onion growing" type="Timer" parent="."]
wait_time = 5.0

[node name="carrot growing" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="onion growing" to="." method="_on_onion_growing_timeout"]
[connection signal="timeout" from="carrot growing" to="." method="_on_carrot_growing_timeout"]
